--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -1,12 +1,12 @@
-.button {
+  .button {
   height: 40px;
   padding: 0 12px;
   border-radius: 8px;
   transition: .25s ease-in-out;
-  background-color: rgba(37, 37, 45);
+  /* background-color: rgba(37, 37, 45); */
+  background-color: #FF5F5D;
   line-height: 40px;
-  margin-right: 6px;
-  color: teal;
+  margin-right: 10px;
   border: 0;
   font-size: 16px;
   font-weight: bold;
