--- a/styles/Quote.module.css
+++ b/styles/Quote.module.css
@@ -20,8 +20,10 @@
 .subtitle {
   margin: 0;
   line-height: 1;
-  font-size: 88px;
+  font-size: 64px;
   font-weight: 900;
+  /* height: 600px; */
+  overflow-y: scroll;
 }
 
 .title,
@@ -51,4 +53,30 @@
 
 .quote {
   max-width: 800px;
+  height: 600px;
+  flex: 4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.buttons {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.button {
+  margin: 1rem;
+}
+
+.button svg {
+  color: white;
+  transition: all .3s;
+}
+
+.button:hover svg{
+  color: #FF5F5D;
 }
