--- a/styles/RenderQuote.module.css
+++ b/styles/RenderQuote.module.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  pointer-events: none;
+  /* pointer-events: none; */
   transform: 'translate(-50%, -50%)',
 }
 
@@ -28,17 +28,20 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  pointer-events: all;
+  /* pointer-events: all; */
 }
 
 .card p {
   font-size: 42px;
   margin: 12px 0;
+  font-weight: 900;
+  color: #fff;
 }
 
 .card p.title {
   font-size: 32px;
   font-weight: bold;
+  color: #FF5F5D;
 }
 
 .buttonContainer {
@@ -50,4 +53,5 @@
   font-size: 21px;
   font-weight: bold;
   margin-bottom: 12px;
+  color: #FF5F5D;
 }
