--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,6 +52,8 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
   font-family: 'Circular', sans-serif;
+  max-height: 100vh;
+  background-color: #121212;
 }
 
 a {
