--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -16,3 +16,9 @@
 .button span {
   margin-left: 5px;
 }
+
+@media only screen and (max-width: 720px) {
+  .button span {
+    display: none;
+  }
+}
