--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -126,3 +126,27 @@
     flex-direction: column;
   }
 }
+
+
+.quoteNav {
+  display: none;
+}
+
+@media only screen and (max-width: 720px) {
+  .quoteNav {
+    display: flex;
+    position: sticky;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #FF5F5D;
+    padding: 12px 20px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .quoteNav a {
+    margin: 0 15px;
+  }
+  
+}
