--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -10,15 +10,22 @@
   border: 0;
   font-size: 16px;
   font-weight: bold;
-  display: inline-block;
+  /* display: inline-block; */
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .button span {
   margin-left: 5px;
+  margin-right: 5px;
 }
 
 @media only screen and (max-width: 720px) {
   .button span {
     display: none;
+  }
+  .button .label {
+    display: inherit;
   }
 }
